# pymelcloudhome

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: .melcloudhome_context_response  README.md  basic_usage.py  control_atw.py  device_state.py  raspberry_pi_usage.py
pymelcloudhome/: __init__.py  client.py  config.py  models.py
pymelcloudhome/models/: __init__.py  base.py  building.py  device.py  user.py
pymelcloudhome/services/: __init__.py  api_client.py  authentication.py  cache.py  device_service.py
scripts/: update-lock.bat  update-lock.ps1  update-lock.sh
tests/: test_authentication.py  test_client.py  test_config.py  test_errors.py  test_integration.py  test_models.py  test_real_login.py  test_services.py
